--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
     "titleBar.inactiveBackground": "#367a3c99",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#367a3c"
+  "peacock.color": "#367a3c",
+  "cSpell.words": ["casl", "pgcrypto", "typeorm"]
 }
